--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="app-header">
     <h1>Intelligenter Posteingang</h1>
-    <p class="subtitle">Scanner → Inbox → Review/Processed</p>
+    <p class="subtitle">Scanner → Inbox → Review/Hold/Processed</p>
     <div id="userbox" style="margin-left:auto; display:flex; align-items:center; gap:10px;">
       <span id="current-user" title="aktueller Benutzer"></span>
       <button id="logout-btn" class="icon-btn">Abmelden</button>
@@ -68,7 +68,6 @@
 
 
     <!-- HOLD -->
-
       <section id="panel-hold" role="tabpanel" hidden>
         <div class="split">
           <aside class="sidebar">
